Remove the Lob annotation